--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,17 @@
 @import "tailwindcss";
+
+@theme {
+  /* Primary */
+
+  --color-Green-lighter: #dff1e7;
+  --color-Green-medium: #0c7d69;
+  --color-Red: #d73c3c;
+
+  /* Neutral */
+
+  --color-White: #ffffff;
+  --color-Grey-medium: #87a3a6;
+  --color-Grey-darker: #2b4246;
+
+  --font-display: "Karla", serif;
+}
